plugins {
	id 'org.springframework.boot' version '2.4.1'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'br.com.otavio'
description = 'data-analysis-camel'
version = '0.0.1-SNAPSHOT'

compileJava {
	sourceCompatibility = 15
	targetCompatibility = 15
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.junit:junit-bom:5.5.2"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	implementation 'org.apache.camel.springboot:camel-spring-boot-starter:3.6.0'
	implementation 'org.apache.camel.springboot:camel-file-watch-starter:3.6.0'
	implementation 'org.apache.commons:commons-lang3:3.11'

	testImplementation('org.junit.jupiter:junit-jupiter-api')
	testImplementation('org.junit.jupiter:junit-jupiter-params')
	testImplementation('org.junit.platform:junit-platform-launcher')
	testImplementation('org.junit.platform:junit-platform-runner')
	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')

	testImplementation 'org.mockito:mockito-core:2.21.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:2.21.0'
	testImplementation 'org.assertj:assertj-core:3.11.1'
}

test {
	useJUnitPlatform {
		includeEngines 'junit-jupiter'
	}
}

bootBuildImage {
	imageName = "otavio.com.br/data-analysis-camel"
}